[package]
name = "dappr"
version = "0.1.0"
description = "Dappr Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["associated_token", "token"] }
spl-token = { version = "3.5.0", features = ["full"] }
spl-associated-token-account = { version = "1.1.2" }
mpl-token-metadata = { version = "1.4.5", features = ["no-entrypoint"] }
